Add benchmark analysis documentation and update settings.gradle.kts.
- Included "otp-testkit" and "samples:benchmarks" in the project settings for better organization and access.
- Created comprehensive benchmark analysis documentation detailing various scenarios, algorithms, and performance comparisons against Erlang/OTP, Akka, and Orleans.
- Added a CBR claim registry and confidence model documentation to support ongoing evaluation of system fidelity and correctness.
- Established a structured playbook for the Confidence-Based Review (CBR) loop to guide iterative assessments and evidence gathering.

Co-authored-by: Cursor <cursoragent@cursor.com>